Fix z-index issue on megamenu

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -105,7 +105,7 @@
 .megamenu {
     top: 100px;
     display: none;
-    z-index: 9;
+    z-index: 10;
     position: fixed;
     color: white;
     background-color: #333333;
